<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:padding="10dp"
    tools:context=".SignupActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail"
        android:hint="@string/LoginEmailHint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassword"
        android:hint="@string/LoginPasswordHint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="11dp"
        android:text="@string/Forgot_Password"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/Login"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signupText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupText"
        android:text="@string/Not_Registered"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>




















</androidx.constraintlayout.widget.ConstraintLayout>